--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Dependencies
-markdown:         redcarpet
+#markdown:         redcarpet
 highlighter:      pygments
 
 # Permalinks
@@ -24,3 +24,7 @@ version:          2.1.0
 
 github:
   repo:           https://github.com/poole/hyde
+
+plugins:
+        - jekyll-gist
+        - jekyll-paginate         
